--- a/prod-manifest.yaml
+++ b/prod-manifest.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: prod-stedi-brent
-          image: gcr.io/cubs-consulting/stedi # This image needs to refer to the NEW Artifact registry repositorry
+          image: us-docker.pkg.dev/cit262-team-01/brent-api/apitestw08:latest # This image needs to refer to the NEW Artifact registry repositorry
           env:
             - name: REDIS_PASSWORD
               valueFrom:
